Added global search results count

--- a/manuskript/ui/search_ui.ui
+++ b/manuskript/ui/search_ui.ui
@@ -57,8 +57,7 @@
        </property>
        <property name="icon">
         <iconset theme="edit-find">
-         <normaloff/>
-        </iconset>
+         <normaloff>.</normaloff>.</iconset>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -69,6 +68,16 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="lblResultsCounter">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QListWidget" name="result">
